Project shortened url

--- a/MVC_Express/views/index.ejs
+++ b/MVC_Express/views/index.ejs
@@ -48,7 +48,7 @@
             <label for="Age" class="block text-sm/6 font-medium text-gray-900">Age</label>
           </div>
           <div class="mt-2">
-            <input type="text" name="Age" id="Age" autocomplete="current-password" required
+            <input type="text" name="age" id="Age" autocomplete="current-password" required
               class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
           </div>
         </div>
@@ -57,7 +57,7 @@
             <label for="number" class="block text-sm/6 font-medium text-gray-900">Phone</label>
           </div>
           <div class="mt-2">
-            <input type="number" name="contact" id="phone" autocomplete="current-password" required
+            <input type="number" name="phone" id="phone" autocomplete="current-password" required
               class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
           </div>
         </div>
